# rig-extra-project

./: .gitignore  Cargo.toml  LICENSE  Settings.toml.example  readme.md
examples/bigmodel_provider_demo/: Cargo.toml
examples/bigmodel_provider_demo/src/: main.rs
examples/mcp_demo/: Cargo.toml  readme.md
examples/mcp_demo/src/: main.rs  mcp_adaptor.rs
examples/rand_agent_demo/: Cargo.toml
examples/rand_agent_demo/src/: main.rs
examples/retry_demo/: Cargo.toml
examples/retry_demo/src/: main.rs
examples/rmcp_demo/: Cargo.toml
examples/rmcp_demo/src/: main.rs
examples/thread_safe_rand_agent_demo/: Cargo.toml
examples/thread_safe_rand_agent_demo/src/: main.rs
examples/tools_demo/: Cargo.toml
examples/tools_demo/src/: main.rs
rig-extra/: Cargo.toml  readme.md
rig-extra/src/: error.rs  get_openai_agent.rs  get_openrouter_model_list.rs  json_utils.rs  lib.rs  rand_agent.rs  simple_rand_builder.rs  thread_safe_rand_agent.rs
rig-extra/src/extra_providers/: bigmodel.rs  completions_openai.rs  mod.rs
rig-extra/src/tools/: datetime_tool.rs  github_trending_tool.rs  mod.rs  serpapi.rs  serpapi_tool.rs
