[package]
name = "rig-extra"
version = "0.13.1"
edition = "2024"
authors = ["cyberdoors"]
keywords = ["rig-core-extra", "bigmodel","rig-core"]
description = "基于rig-core的简单扩展"
repository = "https://github.com/launcher-rs/rig-extra-project"
license = "MIT"


[dependencies]
rig-core = { version = "0.23.1",optional = true,default-features = false }
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.12",default-features = false,optional = true,features = ["json", "stream", "multipart"]}
serde_json = "1"
tracing = "0.1.41"
rand = "0.9.1"
thiserror = "2"
tokio = {version = "1",features = ["full"]}
strum_macros = "0.27.1"
backon = "1.5.2"
schemars = "1.0.4"
# tools-only deps, make optional and enable via feature rig-extra-tools
chrono = { version = "0.4.42", optional = true }
tyme4rs = { version = "1.3.3", optional = true }
scraper = { version = "0.24.0", optional = true }
http = "1.3.1"

# 使用feature ,将 rig-core导入
[features]
default = ["rig-core/default","reqwest","reqwest/default"]
rig-all = ["rig-core/all"]
rig-audio = ["rig-core/audio"]
rig-image = ["rig-core/image"]
rig-derive = ["rig-core/derive"]
rig-pdf = ["rig-core/pdf"]
rig-epub = ["rig-core/epub"]
rig-rayon = ["rig-core/rayon"]
rig-worker = ["rig-core/worker"]
rig-rmcp = ["rig-core/rmcp"]
rig-socks = ["rig-core/socks"]
rig-reqwest-rustls = [
    "rig-core/reqwest-rustls",
    "reqwest/rustls-tls",
    "reqwest/charset",
    "reqwest/http2",
    "reqwest/macos-system-configuration"
]

# Enable tools module and its dependencies
rig-extra-tools = [
    "chrono",
    "tyme4rs",
    "scraper"
]

[dev-dependencies]
config = "0.15"
