[package]
name = "bigmodel_provider_demo"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
rig-extra = {path = "../../rig-extra"}
tokio = { version = "1.43.0", features = ["full"] }
config = "0.15.11"
thiserror = "1.0.69"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
schemars = "1.0.4"
