[package]
name = "mcp_demo"
version = "0.1.0"
edition = "2024"
publish = false


[dependencies]
rig-extra = {path = "../../rig-extra"}
tokio = { version = "1.43.0", features = ["full"] }
serde_json = "1.0.140"
config = "0.15.11"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main",features = [
    "client",
    "transport-sse-client",
    "reqwest",
    "transport-streamable-http-client",
    "transport-child-process",
    "tower",
    "auth"
] }