[package]
name = "tools_demo"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
rig-extra = { path = "../../rig-extra" }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
config = "0.15.11"
anyhow = "1.0.98"
